we have worked  on the version control, I have fixed the issue on controllers, service and repositories